feat: define public 1.0 contract
